# jsonsqlquery

./: LICENSE  README.md  main.py  pyproject.toml  test.sh
.github/workflows/: ci.yml
examples/: in_data.jsonl  out_data_1.jsonl  out_data_2.jsonl  query_1.sql  query_2.sql
jsonquery/: main.py
jsonsqlquery/: __init__.py  cli.py  core.py  main.py
scripts/: check.sh  clitest.sh  test.sh
tests/: test_query.py
